--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
             <div class="timeline-item">
                 <h3>Junior Software Developer</h3>
                 <div class="company">Hallmark Global Technologies</div>
-                <div class="date">August 2024 – Present</div>
+                <div class="date">August 2024 – August 2025</div>
                 <p>Designed advanced multi-agent systems to streamline complex operations and enhance chatbot functionality. Implemented solutions ensuring efficient transitions to latest database technologies using AutoGen and Neo4j.</p>
             </div>
             <div class="timeline-item">
@@ -1070,3 +1070,4 @@
 </body>
 
 </html>
+
